--- a/Oppgave 22.04 js Intro/oppgave4.html
+++ b/Oppgave 22.04 js Intro/oppgave4.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src=""></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Overskrift</h1>
     <p>Litt tekst</p>
     <img id="myImg" src="Images/Img1.jpg" alt="">
-    <button onclick="firstImg"></button>
-    <button onclick="secondImg"></button>
-    <button onclick="thirdImg"></button>
+    <button onclick="firstImg()">First Image</button>
+    <button onclick="secondImg()">Second Image</button>
+    <button onclick="thirdImg()">Third Image</button>
 
 </body>
 </html>
