--- a/Oppgave 25.04 Js dag 3 Konverter enheter/Oppgave4.html
+++ b/Oppgave 25.04 Js dag 3 Konverter enheter/Oppgave4.html
@@ -12,6 +12,6 @@
     <div id="bmiSvar">
     </div>
 
-    <script src="scrippt.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
