--- a/Oppgave 25.04 Js dag 3 Konverter enheter/Oppgave1.html
+++ b/Oppgave 25.04 Js dag 3 Konverter enheter/Oppgave1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="scrippt.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <input type="number" placeholder="Skriv inn et tall" id="numberInpt">
