--- a/Oppgave 25.04 Js dag 3 Konverter enheter/Oppgave6.html
+++ b/Oppgave 25.04 Js dag 3 Konverter enheter/Oppgave6.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <input type="text" placeholder="Skriv inn fornavn" id="fornavnText">
-    <input type="text" placeholder="Skriv inn etternavn" id="etternavnText">
-    <button onclick="emailBtn()"></button>
+    <input type="text" placeholder="Skriv inn etternavn" id="etternavnText"> 
+    <button id="email-btn">BUTTON</button>
     <div id="concDiv"></div>
 
 
@@ -16,6 +16,6 @@
 
 
 
-    <script src="scrippt.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
