--- a/Oppgave 15.05 switch case og operatører/Oppgave4.html
+++ b/Oppgave 15.05 switch case og operatører/Oppgave4.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Bmi kalkulator</h1>
-    <input type="number" name="" id="" placeholder="Vekt i KG">
-    <input type="number" name="" id="" placeholder="Høyde i meter">
+    <input type="number" name="" id="inputWeight" placeholder="Vekt i KG">
+    <input type="number" name="" id="inputHeight" placeholder="Høyde i meter">
     <button onclick="bmiBtn()">Finn din BMI</button>
     <div id="bmiDiv"></div>
 </body>
