--- a/Oppgave 16.05 ternay,modulus,dynamisk/EkstraOppgave2.html
+++ b/Oppgave 16.05 ternay,modulus,dynamisk/EkstraOppgave2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <textarea name="" id="textArea"></textarea>
-    <button id="textAreaBtn""></button>
+    <button id="textAreaBtn"></button>
     <p id="displayTextArea"></p>
 </body>
 </html>
