--- a/Oppgave 20.05 funksjoner/Oppgave3.html
+++ b/Oppgave 20.05 funksjoner/Oppgave3.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="number" name="" id="areal-input" placeholder="Areal">
+    <input type="number" name="" id="lengde-input" placeholder="Lengde">
     <input type="number" name="" id="bredde-input" placeholder="Bredde">
     <button onclick="arealBtn()"></button>
     <div id="arealDiv" aria-placeholder="Dette er arealet"></div>
