--- a/Oppgave 23.05 Løkker ++/Oppgave3.html
+++ b/Oppgave 23.05 Løkker ++/Oppgave3.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Skriv ut når tallet passerer 1238</h2>
-    <div id="oppgaveEnDivA"></div>
-    <h2>Skriv ut det partallet som gjore at summen oversteg 2250</h2>
-    <div id="oppgaveEnDivB"></div>
+    <h2></h2>
+    <button onclick="oppgaveTreBtn()">Knapp</button>
+    <table id="oppgaveTreTable"></table>
 
 <script src="script.js"></script>
 </body>
