--- a/Oppgave 23.05 Løkker ++/Oppgave5.html
+++ b/Oppgave 23.05 Løkker ++/Oppgave5.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Skriv ut når tallet passerer 1238</h2>
-    <div id="oppgaveEnDivA"></div>
-    <h2>Skriv ut det partallet som gjore at summen oversteg 2250</h2>
-    <div id="oppgaveEnDivB"></div>
+    <input type="number" name="" id="oppgaveFemInput">
 
+    <button onclick="oppgaveFemBtn()">Knapp</button>
+
+    <div id="oppgaveFemDiv"></div>
 <script src="script.js"></script>
 </body>
 </html>
