--- a/Oppgave 30.05 Objekter og arrays/Oppgave2.html
+++ b/Oppgave 30.05 Objekter og arrays/Oppgave2.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" name="" id="monthInput" placeholder="Skriv inn en månd">
+    
+    <button onclick="andebyKnapp()">Knapp</button>
 
-    <button onclick="arrayFourBtn()">Knapp</button>
+    <div id="andebyDiv"></div>
 
-    <div id="arrayFourDiv"></div>
 
     <script src="script.js"></script>
 </body>
